Fix blog title's dependency on "heading" group's alignment controller in design editor
Fixes #59

--- a/sources/components/custom-styles/template-cs-blog-article.scss
+++ b/sources/components/custom-styles/template-cs-blog-article.scss
@@ -47,6 +47,15 @@
   --blog-article-title-line-height: 1.2;
 
   /* VoogStyle
+     "pathI18n": ["blog", "title"],
+     "titleI18n": "alignment",
+     "editor": "listPicker",
+     "list": {{ base_alignment_set }},
+     "scope": "global"
+  */
+  --blog-article-title-alignment: center;
+
+  /* VoogStyle
     "pathI18n": ["blog", "title"],
     "titleI18n": "font_weight",
     "type": "button",
