--- a/sources/components/custom-styles/template-cs-blog-list.scss
+++ b/sources/components/custom-styles/template-cs-blog-list.scss
@@ -44,6 +44,15 @@
   --blog-list-title-line-height: 1.2;
 
   /* VoogStyle
+     "pathI18n": ["blog", "title"],
+     "titleI18n": "alignment",
+     "editor": "listPicker",
+     "list": {{ base_alignment_set }},
+     "scope": "global"
+  */
+  --blog-list-title-alignment: left;
+
+  /* VoogStyle
     "pathI18n": ["blog", "title"],
     "titleI18n": "font_weight",
     "type": "button",
