--- a/sources/components/custom-styles/template-cs-style-rules.scss
+++ b/sources/components/custom-styles/template-cs-style-rules.scss
@@ -460,6 +460,7 @@ footer .content-formatted a:not(.noborder):not(.custom-btn):not(.link) {
     line-height: var(--blog-list-title-line-height);
     font-weight: var(--blog-list-title-font-weight);
     font-style: var(--blog-list-title-font-style);
+    text-align: var(--blog-list-title-alignment);
     text-decoration: var(--blog-list-title-text-decoration);
     text-transform: var(--blog-list-title-text-transform);
   }
@@ -482,6 +483,7 @@ footer .content-formatted a:not(.noborder):not(.custom-btn):not(.link) {
     font-style: var(--blog-article-title-font-style);
     font-weight: var(--blog-article-title-font-weight);
     line-height: var(--blog-article-title-line-height);
+    text-align: var(--blog-article-title-alignment);
     text-decoration: var(--blog-article-title-text-decoration);
     text-transform: var(--blog-article-title-text-transform);
   }
